export enum ActivityType {
  UNKNOWN = 'unknown',

  SITUPS = 'situps',
  SQUATS = 'squats',
  PUSHUPS = 'pushups',
  STAR_JUMPS = 'star_jumps',
}
